--- a/Week03-plastic-waste.rmd
+++ b/Week03-plastic-waste.rmd
@@ -1,5 +1,6 @@
 ---
-title: "Global plastic waste"
+title: "Pair Programming Practice: Global plastic waste"
+subtitle: "EdinbR Feb 2024"
 output: html_document
 ---
 
@@ -9,19 +10,17 @@ knitr::opts_chunk$set(eval = FALSE)
 
 Plastic pollution is a major and growing problem, negatively affecting oceans and wildlife health.
 [Our World in Data](https://ourworldindata.org/plastic-pollution) has a lot of great data at various levels including globally, per country, and over time.
-For this lab we focus on data from 2010.
+For this tutorial we focus on data from 2010.
 
-Additionally, National Geographic ran a data visualization communication contest on plastic waste as seen [here](https://www.nationalgeographic.org/funding-opportunities/innovation-challenges/plastic/dataviz/).
 
-# Learning goals
+# Tutorial goals
 
--   Visualize numerical and categorical data and interpret your visualisations.
+-   Visualize numerical and categorical data and interpret your visualizations.
 -   Recreate visualizations.
 
 ## Packages
 
 We'll use the **tidyverse** package for this analysis.
-Run the following code in the Console to load this package.
 
 ```{r load-packages, message=FALSE, eval=TRUE}
 library(tidyverse)
@@ -29,11 +28,10 @@ library(tidyverse)
 
 ## Data
 
-The dataset for this assignment can be found as a csv file.
-You can read it in using the following.
+The dataset can be found as a csv file. You can read it in using the following.
 
 ```{r load-data, message=FALSE, eval=TRUE}
-plastic_waste <- read_csv("data/plastic-waste.csv")
+plastic_waste <- read_csv("plastic-waste.csv")
 ```
 
 The variable descriptions are as follows:
@@ -51,49 +49,47 @@ The variable descriptions are as follows:
 
 # Warm up within your pair
 
-You have 5 minutes to complete this section.
+You have 2 minutes to complete this section.
 
-**Warm up 1:** Verify that the dataset has loaded into the Environment.
+**Warm up:** Verify that the dataset has loaded into the Environment.
 How many observations are in the dataset?
-Clicking on the dataset in the Environment will allow you to inspect it more carefully.
-Alternatively, you can type `View(plastic_waste)` into the Console to do this.
 
-**Warm up 2:** Have a quick look at the data and notice that there are cells taking the value `NA` -- what does this mean?
 
 # Exercises
 
-Let's start by taking a look at the distribution of plastic waste per capita in 2010.
+## Task 1 
 
-```{r plastic_waste_per_cap-hist, eval=TRUE}
-ggplot(data = plastic_waste, aes(x = plastic_waste_per_cap)) +
-  geom_histogram(binwidth = 0.2)
+Let's start by taking a look at the distribution of plastic waste per capita in 2010. Create a data visualization to observe this distribution:
+
+```{r task1, eval=TRUE}
+## your code here 
+
 ```
 
-One country stands out as an unusual observation at the top of the distribution.
-One way of identifying this country is to filter the data for countries where plastic waste per capita is greater than 3.5 kg/person.
+## Task 2 
+One country stands out as an unusual observation at the top of the distribution. Find out which country this is
 
-```{r plastic_waste_per_cap-max, eval=TRUE}
-plastic_waste %>%
-  filter(plastic_waste_per_cap > 3.5)
+*Hint* there are many possible solutions here, be creative as you like 
+
+```{r task2, eval=TRUE}
+
 ```
 
-Did you expect this result?
-You might consider doing some research on Trinidad and Tobago to see why plastic waste per capita is so high there, or whether this is a data error.
 
-1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
+## Task 3
 
-```{marginfigure}
-**NOTE:** From this point onwards the plots and the output of the code are not displayed in the lab instructions, but you can and should the code and view the results yourself.
+Plot the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
+
+```{r task3}
+## your code here 
+
 ```
 
-Another way of visualizing numerical data is using density plots.
+What method did you use to solve Task 3? Are there any alternative approaches that you can think of with your partner? What are the pros and cons of the different approaches? 
 
-```{r plastic_waste_per_cap-dens}
-ggplot(data = plastic_waste, aes(x = plastic_waste_per_cap)) +
-  geom_density()
-```
+## Task 4 
 
-And compare distributions across continents by coloring density curves by continent.
+You can compare distributions across continents by coloring density curves by continent.
 
 ```{r plastic_waste_per_cap-dens-color}
 ggplot(data = plastic_waste, 
@@ -102,52 +98,57 @@ ggplot(data = plastic_waste,
   geom_density()
 ```
 
-The resulting plot may be a little difficult to read, so let's also fill the curves in with colors as well.
+The resulting plot may be a little difficult to read, what can you do to improve readability of the plot? 
 
 ```{r plastic_waste_per_cap-dens-color-fill}
-ggplot(data = plastic_waste, 
-       mapping = aes(x = plastic_waste_per_cap, 
-                     color = continent, 
-                     fill = continent)) +
-  geom_density()
+## your code here 
+
 ```
 
-The overlapping colors make it difficult to tell what's happening with the distributions in continents plotted first, and hence coverred by continents plotted over them.
-We can change the transparency level of the fill color to help with this.
-The `alpha` argument takes values between 0 and 1: 0 is completely transparent and 1 is completely opaque.
-There is no way to tell what value will work best, so you just need to try a few.
 
-```{r plastic_waste_per_cap-dens-color-fill-alpha}
-ggplot(data = plastic_waste, 
-       mapping = aes(x = plastic_waste_per_cap, 
-                     color = continent, 
-                     fill = continent)) +
-  geom_density(alpha = 0.7)
+## Task 5
+
+And yet another way to visualize this relationship is using side-by-side box plots. Do this below: 
+
+```{r task5}
+## your code here 
+
 ```
 
-This still doesn't look great...
+## Task 6 
 
-2.  Recreate the density plots above using a different (lower) alpha level that works better for displaying the density curves for all continents.
+Convert your side-by-side box plots from the previous task to violin plots. What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
 
-3.  Describe why we defined the `color` and `fill` of the curves by mapping aesthetics of the plot but we defined the `alpha` level as a characteristic of the plotting geom.
+```{r task6}
+## your code here 
 
-And yet another way to visualize this relationship is using side-by-side box plots.
-
-```{r plastic_waste_per_cap-box}
-ggplot(data = plastic_waste, 
-       mapping = aes(x = continent, 
-                     y = plastic_waste_per_cap)) +
-  geom_boxplot()
 ```
 
-4.  Convert your side-by-side box plots from the previous task to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
+## Task 7 
 
-5.  Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita using a scatterplot.
-    Describe the relationship.
+Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita. Describe the relationship.
 
-6.  Color the points in the scatterplot by continent.
-    Does there seem to be any clear distinctions between continents with respect to how plastic waste per capita and mismanaged plastic waste per capita are associated?
+```{r task7}
+## your code here 
 
-7.  Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population.
-    You will need to make two separate plots.
-    Do either of these pairs of variables appear to be more strongly linearly associated?
+```
+
+## Task 8 
+
+Color the points in the scatterplot by continent. Does there seem to be any clear distinctions between continents with respect to how plastic waste per capita and mismanaged plastic waste per capita are associated?
+
+```{r task8}
+## your code here 
+
+```
+
+## Task 9 
+
+Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population. Do either of these pairs of variables appear to be more strongly linearly associated?
+
+```{r task9}
+## your code here 
+
+```
+
+
