--- a/Week03-plastic-waste.rmd
+++ b/Week03-plastic-waste.rmd
@@ -5,8 +5,10 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(eval = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
+
+# About the data 
 
 Plastic pollution is a major and growing problem, negatively affecting oceans and wildlife health.
 [Our World in Data](https://ourworldindata.org/plastic-pollution) has a lot of great data at various levels including globally, per country, and over time.
@@ -20,17 +22,17 @@ For this tutorial we focus on data from 2010.
 
 ## Packages
 
-We'll use the **tidyverse** package for this analysis.
+We'll use the `tidyverse` set of packages for this analysis.
 
-```{r load-packages, message=FALSE, eval=TRUE}
+```{r load-packages, message=FALSE}
 library(tidyverse)
 ```
 
 ## Data
 
-The dataset can be found as a csv file. You can read it in using the following.
+The dataset can be found as a csv file on the github repo. You can read it in using the following:
 
-```{r load-data, message=FALSE, eval=TRUE}
+```{r load-data, message=FALSE}
 plastic_waste <- read_csv("plastic-waste.csv")
 ```
 
@@ -54,17 +56,16 @@ You have 2 minutes to complete this section.
 **Warm up:** Verify that the dataset has loaded into the Environment.
 How many observations are in the dataset?
 
-
 # Exercises
 
-Remember to switch driver after each task
+Remember to switch the driver after each task
 
 ## Task 1 
 
 Let's start by taking a look at the distribution of plastic waste per capita in 2010. Create a data visualization to observe this distribution:
 
 ```{r task1, eval=TRUE}
-## your code here 
+# your code here 
 
 ```
 
@@ -83,7 +84,7 @@ One country stands out as an unusual observation at the top of the distribution.
 Plot the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
 
 ```{r task3}
-## your code here 
+# your code here 
 
 ```
 
@@ -103,7 +104,7 @@ ggplot(data = plastic_waste,
 The resulting plot may be a little difficult to read, what can you do to improve readability of the plot? 
 
 ```{r plastic_waste_per_cap-dens-color-fill}
-## your code here 
+# your code here 
 
 ```
 
@@ -113,7 +114,7 @@ The resulting plot may be a little difficult to read, what can you do to improve
 And yet another way to visualize this relationship is using side-by-side box plots. Do this below: 
 
 ```{r task5}
-## your code here 
+# your code here 
 
 ```
 
@@ -122,7 +123,7 @@ And yet another way to visualize this relationship is using side-by-side box plo
 Convert your side-by-side box plots from the previous task to violin plots. What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
 
 ```{r task6}
-## your code here 
+# your code here 
 
 ```
 
@@ -131,7 +132,7 @@ Convert your side-by-side box plots from the previous task to violin plots. What
 Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita. Describe the relationship.
 
 ```{r task7}
-## your code here 
+# your code here 
 
 ```
 
@@ -140,7 +141,7 @@ Visualize the relationship between plastic waste per capita and mismanaged plast
 Color the points in the scatterplot by continent. Does there seem to be any clear distinctions between continents with respect to how plastic waste per capita and mismanaged plastic waste per capita are associated?
 
 ```{r task8}
-## your code here 
+# your code here 
 
 ```
 
@@ -149,7 +150,7 @@ Color the points in the scatterplot by continent. Does there seem to be any clea
 Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population. Do either of these pairs of variables appear to be more strongly linearly associated?
 
 ```{r task9}
-## your code here 
+# your code here 
 
 ```
 
